cargo-features = ["edition2021"]
[package]
name = "aether-die"
version = "1.1.3"
authors = ["Zach Mitchell <zmitchell@fastmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rand = "0.7"
rocket = { version = "0.4.4", default-features = false}
